--- a/templates/comments/_base.html
+++ b/templates/comments/_base.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Lightbox CSS -->
+    <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
 </head>
 <body>
     <header class="bg-primary text-white text-center py-3">
@@ -31,7 +33,17 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <!-- Lightbox JS -->
+    <script src="{% static 'js/lightbox-plus-jquery.js' %}"></script>
     <!-- Custom JS -->
     <script src="{% static 'js/scripts.js' %}" defer></script>
+    <!-- Initialize Lightbox -->
+    <script>
+        lightbox.option({
+            'resizeDuration': 400,
+            'wrapAround': true,
+            positionFromTop:400,
+        })
+    </script>
 </body>
 </html>
