--- a/static/css/lightbox.css
+++ b/static/css/lightbox.css
@@ -1,63 +1,64 @@
+/* General styles for the page */
 body.lb-disable-scrolling {
-  overflow: hidden;
+  overflow: hidden; /* Disables scrolling when this class is applied */
 }
 
+/* Styles for the lightbox overlay */
 .lightboxOverlay {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 9999; /* Ensures the overlay is on top of other elements */
   background-color: black;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
-  opacity: 0.8;
-  display: none;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80); /* For IE8 and older */
+  opacity: 0.8; /* Adjusts transparency */
+  display: none; /* Hidden by default */
 }
 
+/* Styles for the lightbox container */
 .lightbox {
   position: absolute;
   left: 0;
   width: 100%;
-  z-index: 10000;
+  z-index: 10000; /* Higher than the overlay */
   text-align: center;
   line-height: 0;
   font-weight: normal;
   outline: none;
 }
 
+/* Styles for the image inside the lightbox */
 .lightbox .lb-image {
   display: block;
   height: auto;
   max-width: inherit;
   max-height: none;
   border-radius: 3px;
-
-  /* Image border */
-  border: 4px solid white;
+  border: 4px solid white; /* Adds a border around the image */
 }
 
 .lightbox a img {
-  border: none;
+  border: none; /* Removes any default border on the image */
 }
 
+/* Styles for the outer container of the lightbox */
 .lb-outerContainer {
   position: relative;
-  *zoom: 1;
+  *zoom: 1; /* Hack for IE7 to ensure proper layout */
   width: 250px;
   height: 250px;
   margin: 0 auto;
   border-radius: 4px;
-
-  /* Background color behind image.
-     This is visible during transitions. */
-  background-color: white;
+  background-color: white; /* Background color visible during transitions */
 }
 
 .lb-outerContainer:after {
   content: "";
   display: table;
-  clear: both;
+  clear: both; /* Clears floats within the container */
 }
 
+/* Styles for the loader icon */
 .lb-loader {
   position: absolute;
   top: 43%;
@@ -68,14 +69,16 @@ body.lb-disable-scrolling {
   line-height: 0;
 }
 
+/* Styles for the cancel button */
 .lb-cancel {
   display: block;
   width: 32px;
   height: 32px;
   margin: 0 auto;
-  background: url(../images/loading.gif) no-repeat;
+  background: url(../images/loading.gif) no-repeat; /* Loader image */
 }
 
+/* Styles for navigation buttons */
 .lb-nav {
   position: absolute;
   top: 0;
@@ -85,15 +88,13 @@ body.lb-disable-scrolling {
   z-index: 10;
 }
 
-.lb-container > .nav {
-  left: 0;
-}
-
+/* Styles for navigation button links */
 .lb-nav a {
   outline: none;
-  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==');
+  background-image: url('data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=='); /* Transparent placeholder */
 }
 
+/* Styles for the previous and next buttons */
 .lb-prev, .lb-next {
   height: 100%;
   cursor: pointer;
@@ -104,42 +105,43 @@ body.lb-disable-scrolling {
   width: 34%;
   left: 0;
   float: left;
-  background: url(../images/prev.png) left 48% no-repeat;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -webkit-transition: opacity 0.6s;
+  background: url(../images/prev.png) left 48% no-repeat; /* Previous button image */
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); /* For IE8 and older */
+  opacity: 0; /* Hidden by default */
+  -webkit-transition: opacity 0.6s; /* Transition for modern browsers */
   -moz-transition: opacity 0.6s;
   -o-transition: opacity 0.6s;
   transition: opacity 0.6s;
 }
 
 .lb-nav a.lb-prev:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); /* Fully visible on hover for IE8 */
+  opacity: 1; /* Fully visible on hover */
 }
 
 .lb-nav a.lb-next {
   width: 64%;
   right: 0;
   float: right;
-  background: url(../images/next.png) right 48% no-repeat;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -webkit-transition: opacity 0.6s;
+  background: url(../images/next.png) right 48% no-repeat; /* Next button image */
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); /* For IE8 and older */
+  opacity: 0; /* Hidden by default */
+  -webkit-transition: opacity 0.6s; /* Transition for modern browsers */
   -moz-transition: opacity 0.6s;
   -o-transition: opacity 0.6s;
   transition: opacity 0.6s;
 }
 
 .lb-nav a.lb-next:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); /* Fully visible on hover for IE8 */
+  opacity: 1; /* Fully visible on hover */
 }
 
+/* Styles for the data container */
 .lb-dataContainer {
   margin: 0 auto;
   padding-top: 5px;
-  *zoom: 1;
+  *zoom: 1; /* Hack for IE7 to ensure proper layout */
   width: 100%;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -148,14 +150,16 @@ body.lb-disable-scrolling {
 .lb-dataContainer:after {
   content: "";
   display: table;
-  clear: both;
+  clear: both; /* Clears floats within the container */
 }
 
+/* Styles for the data section */
 .lb-data {
   padding: 0 4px;
-  color: #ccc;
+  color: #ccc; /* Light gray text color */
 }
 
+/* Styles for the details and caption within the data section */
 .lb-data .lb-details {
   width: 85%;
   float: left;
@@ -170,7 +174,7 @@ body.lb-disable-scrolling {
 }
 
 .lb-data .lb-caption a {
-  color: #4ae;
+  color: #4ae; /* Link color */
 }
 
 .lb-data .lb-number {
@@ -178,20 +182,21 @@ body.lb-disable-scrolling {
   clear: left;
   padding-bottom: 1em;
   font-size: 12px;
-  color: #999999;
+  color: #999999; /* Darker gray for number text */
 }
 
+/* Styles for the close button */
 .lb-data .lb-close {
   display: block;
   float: right;
   width: 30px;
   height: 30px;
-  background: url(../images/close.png) top right no-repeat;
+  background: url(../images/close.png) top right no-repeat; /* Close button image */
   text-align: right;
   outline: none;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-  opacity: 0.7;
-  -webkit-transition: opacity 0.2s;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70); /* For IE8 and older */
+  opacity: 0.7; /* Slightly visible by default */
+  -webkit-transition: opacity 0.2s; /* Transition for modern browsers */
   -moz-transition: opacity 0.2s;
   -o-transition: opacity 0.2s;
   transition: opacity 0.2s;
@@ -199,6 +204,6 @@ body.lb-disable-scrolling {
 
 .lb-data .lb-close:hover {
   cursor: pointer;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); /* Fully visible on hover for IE8 */
+  opacity: 1; /* Fully visible on hover */
 }
