--- a/templates/comments/_base.html
+++ b/templates/comments/_base.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Комментарии{% endblock %}</title>
+    <title>{% block title %}Комментарии{% endblock %}</title> <!-- Page title -->
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS for styling -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <!-- Custom CSS -->
+    <!-- Custom CSS for additional styling -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- Lightbox CSS -->
+    <!-- Lightbox CSS for image lightbox functionality -->
     <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
 </head>
 <body>
     <header class="bg-primary text-white text-center py-3">
-        <h1>{% block header %}Комментарии{% endblock %}</h1>
+        <h1>{% block header %}Комментарии{% endblock %}</h1> <!-- Page header -->
     </header>
 
     <main class="container my-4">
         {% block content %}
-        {% endblock %}
+        {% endblock %} <!-- Main content area -->
     </main>
 
     <!-- Go to top button -->
@@ -31,18 +31,18 @@
     </button>
     {% endblock go_to_top_btn %}
 
-    <!-- Bootstrap JS -->
+    <!-- Bootstrap JS for interactive components -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <!-- Lightbox JS -->
+    <!-- Lightbox JS for image lightbox functionality -->
     <script src="{% static 'js/lightbox-plus-jquery.js' %}"></script>
-    <!-- Custom JS -->
+    <!-- Custom JS for additional functionality -->
     <script src="{% static 'js/scripts.js' %}" defer></script>
-    <!-- Initialize Lightbox -->
+    <!-- Initialize Lightbox with options -->
     <script>
         lightbox.option({
-            'resizeDuration': 400,
-            'wrapAround': true,
-            positionFromTop:400,
+            'resizeDuration': 400, // Duration of the resizing animation
+            'wrapAround': true,    // Enables wrapping around the images in the lightbox
+            'positionFromTop': 400 // Position of the lightbox from the top of the viewport
         })
     </script>
 </body>
